feature: произведён рефакторинг - Добавлена поддержка CORS в API (Program.cs). - Обновлён ViewModel для сокращения ссылок (ShortenViewModel.cs). - Обновлён интерфейс главной страницы и структуры макетов (Home/Index.cshtml и Shared/_Layout.cshtml). - Улучшен функционал представления для сокращения ссылок (Shortener/Index.cshtml)."

--- a/src/PS.Fluxly_Shortener/PS.Fluxly_Shortener.Web/Views/Shared/_Layout.cshtml
+++ b/src/PS.Fluxly_Shortener/PS.Fluxly_Shortener.Web/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - PS.Fluxly_Shortener.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <p class="small text-muted mb-0">Создано с ❤️ на ASP.NET Core</p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
